k8s/apps/dev/whoami/envs/poc/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: whoami-ingress
  namespace: whoami
spec:
  parentRefs:
    - name: internal
      namespace: gateway
  hostnames:
    - "whoami-ingress.stonegarden.iseja.net"
    - "whoami-ingress2.stonegarden.iseja.net"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: whoami
          port: 80
